// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SbtProject type a simple SbtProject 1`] = `
Object {
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

/.gitattributes             	linguist-generated
/.github/workflows/build.yml	linguist-generated
/.github/workflows/stale.yml	linguist-generated
/.gitignore                 	linguist-generated
/.projen/**                 	linguist-generated
/.projen/deps.json          	linguist-generated
/.projen/tasks.json         	linguist-generated
/build.sbt                  	linguist-generated
/project/build.properties   	linguist-generated
/project/plugins.sbt        	linguist-generated",
  ".github/workflows/build.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: Build
on:
  pull_request: {}
  workflow_dispatch: {}
jobs:
  Build:
    runs-on: ubuntu-latest
    permissions: {}
    steps:
      - uses: actions/checkout@v2
      - uses: actions/setup-node@v2.1.5
        with:
          node-version: 14.17.3
      - uses: actions/cache@v2
        with:
          path: |-
            ~/.ivy2/cache
            ~/.sbt
          key: \${{ runner.os }}-sbt-\${{ hashFiles('**/build.sbt') }}
      - uses: actions/setup-java@v2
        with:
          java-version: \\"8\\"
          distribution: adopt
      - run: yarn
      - run: npx projen build
",
  ".github/workflows/stale.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: stale
on:
  schedule:
    - cron: 0 1 * * *
  workflow_dispatch: {}
jobs:
  stale:
    runs-on: ubuntu-latest
    permissions:
      issues: write
      pull-requests: write
    steps:
      - uses: actions/stale@v4
        with:
          days-before-stale: -1
          days-before-close: -1
          days-before-pr-stale: 14
          days-before-pr-close: 2
          stale-pr-message: This pull request is now marked as stale because it hasn't
            seen activity for a while. Add a comment or it will be closed soon.
          close-pr-message: Closing this pull request as it hasn't seen activity for a
            while. Please add a comment @mentioning a maintainer to reopen.
          stale-pr-label: stale
          days-before-issue-stale: 60
          days-before-issue-close: 7
          stale-issue-message: This issue is now marked as stale because it hasn't seen
            activity for a while. Add a comment or it will be closed soon.
          close-issue-message: Closing this issue as it hasn't seen activity for a while.
            Please add a comment @mentioning a maintainer to reopen.
          stale-issue-label: stale
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
**/target/
.bsp
.idea
node_modules/
!/.gitattributes
!/.github/workflows/build.yml
!/.github/workflows/stale.yml
!/.projen/deps.json
!/.projen/tasks.json
!/build.sbt
!/project/build.properties
!/project/plugins.sbt
",
  ".projen/tasks.json": Object {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
    "tasks": Object {
      "build": Object {
        "name": "build",
        "steps": Array [
          Object {
            "exec": "sbt clean compile test",
          },
        ],
      },
      "clobber": Object {
        "condition": "git diff --exit-code > /dev/null",
        "description": "hard resets to HEAD of origin and cleans the local repo",
        "env": Object {
          "BRANCH": "$(git branch --show-current)",
        },
        "name": "clobber",
        "steps": Array [
          Object {
            "exec": "git checkout -b scratch",
            "name": "save current HEAD in \\"scratch\\" branch",
          },
          Object {
            "exec": "git checkout $BRANCH",
          },
          Object {
            "exec": "git fetch origin",
            "name": "fetch latest changes from origin",
          },
          Object {
            "exec": "git reset --hard origin/$BRANCH",
            "name": "hard reset to origin commit",
          },
          Object {
            "exec": "git clean -fdx",
            "name": "clean all untracked files",
          },
          Object {
            "say": "ready to rock! (unpushed commits are under the \\"scratch\\" branch)",
          },
        ],
      },
      "compile": Object {
        "name": "compile",
        "steps": Array [
          Object {
            "exec": "sbt compile",
          },
        ],
      },
      "default": Object {
        "name": "default",
        "steps": Array [
          Object {
            "exec": "node .projenrc.js",
          },
        ],
      },
    },
  },
  "README.md": "# replace this",
  "build.sbt": "// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
name := \\"test\\"
version := \\"1.0-SNAPSHOT\\"
scalaVersion in ThisBuild := \\"2.13.6\\"",
  "project/build.properties": "# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
sbt.version=1.5.5",
  "project/plugins.sbt": "// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".",
}
`;

exports[`The SbtProject type adding library dependencies 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
name := \\"test\\"
version := \\"1.0-SNAPSHOT\\"
scalaVersion in ThisBuild := \\"2.13.6\\"
libraryDependencies += \\"joda-time\\" % \\"joda-time\\" % \\"2.8.1\\"
libraryDependencies += \\"org.scalamock\\" %% \\"scalamock\\" % \\"4.0.0\\" % \\"test\\""
`;

exports[`The SbtProject type adding sbt plugins 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
addSbtPlugin(\\"com.typesafe.play\\" % \\"sbt-plugin\\" % \\"2.8.8\\")
libraryDependencies += \\"org.vafer\\" % \\"jdeb\\" % \\"1.8\\" artifacts Artifact(\\"jdeb\\", \\"jar\\", \\"jar\\")"
`;

exports[`The SbtProject type overriding the project version 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
name := \\"test\\"
version := \\"x.y.z\\"
scalaVersion in ThisBuild := \\"2.13.6\\""
`;

exports[`The SbtProject type overriding the sbt version 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
sbt.version=x.y.z"
`;

exports[`The SbtProject type overriding the scala version 1`] = `
"// ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".
name := \\"test\\"
version := \\"1.0-SNAPSHOT\\"
scalaVersion in ThisBuild := \\"x.y.z\\""
`;
